<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.post.all.AllPostFragment">

    <LinearLayout
        android:id="@+id/linear_all_post_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="@dimen/error_icon_size"
            android:layout_height="@dimen/error_icon_size"
            android:layout_gravity="center"
            android:src="@drawable/ic_error"
            app:tint="@color/grey"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/empty_message_all_post"
            android:textSize="@dimen/text_error_size"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_retry_all_posts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_retry"
            android:textColor="@color/secondary_dark"
            app:strokeColor="@color/secondary_dark"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_all_post"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/standard_layout_padding"
            android:paddingStart="@dimen/standard_layout_padding"
            android:paddingEnd="@dimen/standard_layout_padding"
            android:paddingBottom="@dimen/padding_5dp">

            <TextView
                android:id="@+id/text_all_post_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/text_subtitle_size"
                tools:text="Publicaciones (100)" />

            <TextView
                android:id="@+id/text_delete_all_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/title_delete_all"
                android:textColor="@color/primary"
                android:textSize="@dimen/text_subtitle_size"
                android:textStyle="bold" />

        </RelativeLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_to_refresh_all_posts"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_all_posts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/item_post"/>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar_all_posts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

</FrameLayout>